--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,5 +46,22 @@ services:
             retries: 5
             start_period: 5s
 
+    warp-socks:
+        image: monius/docker-warp-socks:latest
+        privileged: true
+        volumes:
+            - /lib/modules:/lib/modules
+        cap_add:
+            - NET_ADMIN
+            - SYS_ADMIN
+        sysctls:
+            net.ipv6.conf.all.disable_ipv6: 0
+            net.ipv4.conf.all.src_valid_mark: 1
+        healthcheck:
+            test: ["CMD", "curl", "-f", "https://www.cloudflare.com/cdn-cgi/trace"]
+            interval: 30s
+            timeout: 10s
+            retries: 5
+
 volumes:
     redis-data:
